<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/Loading_Bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:weightSum="30"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/Operation_LL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="6">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/DataMonitorSelector"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Devices_List"
                android:text="@string/AboutDataMonitorManager"
                android:layout_weight="2"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/ZoomOut_Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Devices_List"
                android:text="@string/ZoomOut"
                android:layout_weight="1"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Dashboard_LL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="29"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/Operation_LL"
            tools:ignore="MissingConstraints,NotSibling"
            android:orientation="vertical">

            <com.example.mackayirb.utils.MyLineChart
                android:id="@+id/LineChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/HighlightSelector"
                android:maxLines="1"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/AboutHighlightSelector"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/DataMonitor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>